Fixed video on mobile, small changes to texts, zoomed image now closes when pressed anywhere.

--- a/app/components/demosPage/demosPage.module.css
+++ b/app/components/demosPage/demosPage.module.css
@@ -3,6 +3,16 @@
   flex-direction: column;
   align-items: center;
 
+  @media (max-width: 768px) {
+    .video::-webkit-media-controls-fullscreen-button {
+      display: none;
+    }
+
+    .video::-webkit-media-controls {
+      display: block;
+    }
+  }
+
   .video {
     border-radius: 10px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
